--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,15 +27,15 @@ services:
     container_name: zomboid-dedicated-server
     restart: "no"
     environment:
-      - "ADMIN_PASSWORD=changeme"
-      - "ADMIN_USERNAME=superuser"
+      - "ADMIN_PASSWORD=yorch1982"
+      - "ADMIN_USERNAME=yorch"
       - "AUTOSAVE_INTERVAL=15"
       - "BIND_IP=0.0.0.0"
       - "DEFAULT_PORT=16261"
       - "GAME_VERSION=public"
       - "GC_CONFIG=ZGC"
       - "MAP_NAMES=Muldraugh, KY"
-      - "MAX_PLAYERS=16"
+      - "MAX_PLAYERS=4"
       - "MAX_RAM=4096m"
       - "MOD_NAMES="
       - "MOD_WORKSHOP_IDS="
@@ -44,7 +44,7 @@ services:
       - "RCON_PASSWORD=changeme_rcon"
       - "RCON_PORT=27015"
       - "SERVER_NAME=ZomboidServer"
-      - "SERVER_PASSWORD="
+      - "SERVER_PASSWORD=momia"
       - "STEAM_VAC=true"
       - "UDP_PORT=16262"
       - "USE_STEAM=true"
